	* doc/gramps-manual/C/cmdline.xml,
	doc/gramps-manual/C/gramps-manual.xml,
	doc/gramps-manual/C/custom.xml,
	doc/gramps-manual/C/keybind.xml,
	doc/gramps-manual/C/faq.xml,   
	doc/gramps-manual/C/legal.xml,
	doc/gramps-manual/C/filtref.xml,
	doc/gramps-manual/C/mainwin.xml,
	doc/gramps-manual/C/getstart.xml, 
	doc/gramps-manual/C/usage.xml: Add copyright info to header.

2003-12-02  Tim Waugh  <twaugh@redhat.com>
	* gramps.spec.in: Add more docs.
	* Makefile.am: No need for dist-hook.

2003-12-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: update person table after edit

2003-12-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/FamilyView.py (add_child_clicked): Call self.no_name() 
	when the surname guessing is set to "None" (otherwise it produced 
	traceback and did nothing).
	* doc/gramps-manual/C/custom.xml: Update.
	* doc/gramps-manual/C/gramps-manual-C.omf: Update.
	* doc/gramps.1.in: Update.
	* src/revision.glade: Add Help button.
	* src/gramps_main.py (on_help_dbopen_clicked): Add function.
	* src/plugins/gedcomexport.glade: Add Help button.
	* src/plugins/WriteGedcom.py (on_help_clicked): Add function.
	* src/plugins/pkgexport.glade: Add Help button.
	* src/plugins/WritePkg.py (on_help_clicked): Add function.
	* src/plugins/writeftree.glade: Add Help button.
	* src/plugins/WriteGedcom.py (on_help_clicked): Add function.
	* src/plugins/cdexport.glade: Add Help button.
	* src/plugins/WriteCD.py (on_help_clicked): Add function.
	* src/Bookmarks.py (draw_window): Add Help button; 
	(help_clicked): Add function.
	* src/preferences.glade: Add Help button.
	* src/GrampsCfg.py (on_propertybox_help): Add function.
	* src/imagesel.glade: Add Help buttons.
	* src/ImageSelect.py (ImageSelect.on_help_imagesel_clicked, 
	GlobalMediaProperties.on_help_clicked): Add functions. 
	* src/AddMedia.py (on_help_imagesel_clicked): Add function. 
	* doc/gramps-manual/C/usage.xml: Update.
	* doc/gramps-manual/C/keybind.xml: Update.